[swagger edit] &&[doc]: add search
